Fix wrap in a form

--- a/css/main.css
+++ b/css/main.css
@@ -428,7 +428,7 @@ main {
 }
 .row {
   display: flex;
-  flex-grow: 1;
+  flex-wrap: wrap;
 }
 [class*="col-"] {
   padding-right: 3rem;
