--- a/less/layout.less
+++ b/less/layout.less
@@ -25,7 +25,7 @@ main {
 
 .row {
     display: flex;
-    flex-grow: 1;
+    flex-wrap: wrap;
 }
 
 
